[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-context-vault"
version = "0.1.0"
description = "The intelligent context management framework for LLM applications."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Ankit Kumar", email = "75857506+ankitk437@users.noreply.github.com"},
]
maintainers = [
  {name = "Ankit Kumar", email = "75857506+ankitk437@users.noreply.github.com"},
]
keywords = [
  "llm",
  "context",
  "memory",
  "conversation",
  "prompt",
  "vector-search",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]
openai = ["openai>=1.0"]

[project.urls]
Homepage = "https://github.com/ankitk437/context_vault"
Repository = "https://github.com/ankitk437/context_vault"
Issues = "https://github.com/ankitk437/context_vault/issues"

[tool.setuptools.packages.find]
include = ["context_vault*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
